--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,23 +8,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.0.1
-  cloud_firestore: ^1.0.1
   image_picker: ^0.7.2+1
-  firebase_storage: ^8.0.0
-  firebase_auth: ^1.0.1
-  google_sign_in: ^5.0.0
+  # google_sign_in: ^5.0.0
   uuid: ^3.0.1
   image: ^3.0.1
   font_awesome_flutter: ^8.5.0
   async: ^2.4.0
-  http: ^0.13.0
-  shared_preferences: ^2.0.4
   cached_network_image: ^2.0.0
-  firebase_messaging: ^9.0.0
   location: ^4.1.1
-  geocoder: ^0.2.1
   flare_flutter: ^2.0.6
+  amplify_flutter: ^0.2.4
+  amplify_auth_cognito: ^0.2.4
+  amplify_storage_s3: ^0.2.4
+  amplify_analytics_pinpoint: ^0.2.4
+  amplify_api: ^0.2.4
+  # google_sign_in: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
