--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: Fluttergram
 description: A new Flutter application.
-version: 1.2.3+1
+version: 1.0.0
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -22,16 +22,23 @@ dependencies:
   amplify_storage_s3: ^0.2.4
   amplify_analytics_pinpoint: ^0.2.4
   amplify_api: ^0.2.4
+  get: ^4.3.8
   # google_sign_in: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-#dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
+dev_dependencies:
+ flutter_test:
+   sdk: flutter
 
+   # The "flutter_lints" package below contains a set of recommended lints to
+# encourage good coding practices. The lint set provided by the package is
+# activated in the `analysis_options.yaml` file located at the root of your
+# package. See that file for information about deactivating specific lint
+# rules and activating additional ones.
+flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
