--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   amplify_analytics_pinpoint: ^0.2.4
   amplify_api: ^0.2.4
   get: ^4.3.8
+  logger: ^1.1.0
   # google_sign_in: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
