--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,7 @@
 			</array>
          </dict>
      </array>
+	<key>NSCameraUsageDescription</key>
+    <string>Describe why your app needs AR here.</string>
 </dict>
 </plist>
