--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   amplify_api: ^0.2.4
   get: ^4.3.8
   logger: ^1.1.0
+  arkit_plugin: ^1.0.5
   # google_sign_in: ^5.1.1
 
   # The following adds the Cupertino Icons font to your application.
