--- a/.gitignore
+++ b/.gitignore
@@ -142,7 +142,8 @@ amplifytools.xcconfig
 #amplify-do-not-edit-end
 
 
-amplify/
+amplify
+!*/services/amplify
 **/amplifyconfiguration.dart
 
 *.keystore
